feat(sync): align backend with frontend adjustments